--- a/testimonial.html
+++ b/testimonial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Transformation Haven</title>
+    <title>Transformation Haven Foundation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -143,70 +143,69 @@
     <!-- Testimonial End -->
         
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5"  id="footer">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6"  id="foot">
-                   <img src="img/transformation3.png" class="fw-bold text-primary mb-4" alt="" width="300px" height="300px">
-                    <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals. </p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
-                    </div>
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s" id="footer">
+    <div class="container py-5" id="footer2" >
+        <div class="row g-5" >
+            <div class="col-lg-3 col-md-6">
+                <img src="img/transformation3.png" alt="" width="300px" height="300px">
+                <div class="p">
+                <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
                 </div>
-                <div class="last">
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Address</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>Haven House, Beside MTN Mast, anfani layout, Ibadan, Nigeria</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>0707 964 3757</p>
-                    <p><i class="fa fa-envelope me-3"></i>transformationhavenfoundation@gmail.com</p>
+            </div>
+            </div>
+            <div class="add">
+            <div class="col-lg-3 col-md-6" id="address">
+                <h5 class="text-light mb-4">Address</h5>
+                <p><i class="fa fa-map-marker-alt me-3"></i>Haven House, Beside MTN Mast, anfani layout, Ibadan, Nigeria</p>
+                <p><i class="fa fa-phone-alt me-3"></i>0707 964 3757</p>
+                <p><i class="fa fa-envelope me-3"></i>transformationhavenfoundation@gmail.com</p>
+            </div>
+            <div class="col-lg-3 col-md-6" id="news">
+                <h5 class="text-light mb-4">Newsletter</h5>
+                <p>Subscribe to our Newsletter</p>
+                <div class="position-relative mx-auto" style="max-width: 400px;">
+                    <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" id="signup">SignUp</button>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="team.html">Team</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">testimonial</a>
-                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid copyright" id="copy">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a href="#">Transformation</a>Haven 2024.
                 </div>
             </div>
         </div>
     </div>
-        <div class="container-fluid copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                     <center>  <span id="span"> &copy; Transformation Haven Foundation 2024, All Right Reserved.</span></center>
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+</div>
 
-    <!-- Footer End -->
+<!-- Footer End -->
 
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+<!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/parallax/parallax.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/parallax/parallax.min.js"></script>
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
 </body>
 
 </html>
