--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                     <img src="img/transformation3.png" alt="" width="300px" height="300px">
                     <div class="p">
                     <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-                    <div class="d-flex pt-2">
+                    <div class="d-flex pt-2" id"link">
                         <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
