--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Full Name</h5>
                             <p class="text-primary">Designation</p>
-                            <div class="team-social text-center">
+                            <div class="team-social text-center" id"link">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
