--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Transformation Haven</title>
+    <title>Transformationhavenfoundation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -61,6 +61,7 @@
                 </div>
             </div>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
         </div>
         <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-outline-primary py-2 px-3" href="">
@@ -177,12 +178,12 @@
                 <img src="img/transformation3.png" alt="" width="300px" height="300px">
                 <div class="p">
                 <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-              <div class="d-flex pt-2" id="link">
-                        <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
-                    </div>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
+                </div>
             </div>
             </div>
             <div class="add">
