--- a/testimonial.html
+++ b/testimonial.html
@@ -77,6 +77,7 @@
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
                 </div>
                 <div class="d-none d-lg-flex ms-2">
                     <a class="btn btn-outline-primary py-2 px-3" href="">
@@ -114,7 +115,7 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3594.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Being part of this community has shown me how small efforts can create huge impacts. Together, we’ve brought hope to families in need, and I am proud to support such a dedicated organization.</p>
                         <h5 class="mb-1">Sarah Adeyemi</h5>
@@ -122,18 +123,18 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3358.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>The work this NGO does is remarkable. From providing healthcare to the underserved to advocating for those without a voice, they’ve inspired me to get involved and give back in any way I can</p>
-                        <h5 class="mb-1">John Cole</h5>
-                        <span class="fst-italic">Doctor</span>
+                        <h5 class="mb-1">Mrs Blessing</h5>
+                        <span class="fst-italic">Mother</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3660.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Supporting this NGO has been a rewarding experience. Their commitment to improving lives is unmatched, and I’ve seen firsthand how they uplift communities through their tireless efforts.</p>
-                        <h5 class="mb-1">Micheal Peter</h5>
+                        <h5 class="mb-1">Seun Akindola</h5>
                         <span class="fst-italic">Entrepreneur</span>
                     </div>
                 </div>
@@ -151,12 +152,12 @@
                 <img src="img/transformation3.png" alt="" width="300px" height="300px">
                 <div class="p">
                 <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-               <div class="d-flex pt-2" id="link">
-                        <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
-                    </div>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
+                </div>
             </div>
             </div>
             <div class="add">
