--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Transformation Haven</title>
+    <title>Transformation Haven Foundation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -59,7 +59,6 @@
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <h1 id="head" class="fw-bold text-primary m-0">Transformation<span class="text-white">Haven</span></h1>
-            <img class="img2" src="img/tran-removebg-preview.png" alt="" width="300px" height="300px">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -77,6 +76,7 @@
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-outline-primary py-2 px-3" href="">
@@ -98,8 +98,8 @@
     <div class="container-fluid p-0 mb-5">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image" width="940px" height="940px">
+                <div class="carousel-item active" data-bs-interval="20000">
+                    <img class="w-100" src="img/newpicture11.jpeg" alt="Image" width="940px" height="940px">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -117,8 +117,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="img/Uganda.jpg" alt="Image" width="940px" height="940px">
+                <div class="carousel-item " data-bs-interval="15000">
+                    <img class="w-100" src="img/newpicture9.jpeg" alt="Image" width="940px" height="940px">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -158,8 +158,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="img/Uganda.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/WIDOW-1.jpg" alt="" style="width: 200px; height: 200px;">
+                        <img class="position-absolute w-80 h-100 pt-5 pe-5" src="img/newpicture5.jpeg" alt="" style="object-fit: cover;  margin-top: 30px;">
+                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/newpicture1.jpeg" alt="" style="width: 200px; height: 200px; object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/courses-1.jpg" alt="">
+                            <img class="img-fluid" src="img/RDM_3801.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
@@ -257,7 +257,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/WIDOW-1.jpg" alt="">
+                            <img class="img-fluid" src="img/RDM_3986.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
@@ -290,7 +290,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/images.jpeg" alt="">
+                            <img class="img-fluid" src="img/RDM_3645.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
@@ -480,7 +480,7 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Full Name</h5>
                             <p class="text-primary">Designation</p>
-                            <div class="team-social text-center" id"link">
+                            <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
@@ -503,7 +503,7 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-1.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3594.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Being part of this community has shown me how small efforts can create huge impacts. </p>
                         <h5 class="mb-1">Sarah Adeyemi</h5>
@@ -511,18 +511,18 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3508.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>The work this NGO does is remarkable. From providing healthcare to the underserved to advocating for those without a voice.</p>
-                        <h5 class="mb-1">John Cole</h5>
-                        <span class="fst-italic">Doctor</span>
+                        <h5 class="mb-1">Mrs Blessing</h5>
+                        <span class="fst-italic">Mother</span>
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3660.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Supporting this NGO has been a rewarding experience.</p>
-                        <h5 class="mb-1">Micheal Peter</h5>
+                        <h5 class="mb-1">Seun Akindola</h5>
                         <span class="fst-italic">Entrepreneur</span>
                     </div>
                 </div>
@@ -540,7 +540,7 @@
                     <img src="img/transformation3.png" alt="" width="300px" height="300px">
                     <div class="p">
                     <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-                   <div class="d-flex pt-2" id="link">
+                    <div class="d-flex pt-2" id="link">
                         <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
