--- a/about.html
+++ b/about.html
@@ -44,7 +44,6 @@
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
             <h1 id="head" class="fw-bold text-primary m-0">Transformation<span class="text-white">Haven</span></h1>
-            <img class="img2" src="img/tran-removebg-preview.png" alt="" width="300px" height="300px">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -62,6 +61,7 @@
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-outline-primary py-2 px-3" href="">
@@ -98,8 +98,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="img/Uganda.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/WIDOW-1.jpg" alt="" style="width: 200px; height: 200px;">
+                        <img class="position-absolute w-150 h-100 pt-5 pe-5" src="img/newpicture5.jpeg" alt="" style="object-fit: contain; margin-top: 30px;">
+                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/newpicture10.jpeg" alt="" style="width: 200px; height: 200px;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -271,10 +271,10 @@
                     <img src="img/transformation3.png" alt="" width="300px" height="300px">
                     <div class="p">
                     <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-                      <div class="d-flex pt-2" id="link">
+                    <div class="d-flex pt-2">
                         <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
                     </div>
                 </div>
