--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="photo.html" class="nav-item nav-link">Photo Gallery</a>
             </div>
             <div class="d-none d-lg-flex ms-2">
                 <a class="btn btn-outline-primary py-2 px-3" href="">
@@ -83,7 +84,7 @@
             <h1 class="display-4 text-white animated slideInDown mb-4">Contact Us</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
                     <li class="breadcrumb-item text-primary active" aria-current="page">Contact Us</li>
                 </ol>
@@ -160,10 +161,10 @@
                     <img src="img/transformation3.png" alt="" width="300px" height="300px">
                     <div class="p">
                     <p>Transformation Haven Foundation is dedicated to transforming lives and communities by providing support, education, and empowerment to orphaned, underprivileged and disadvantaged individuals.</p>
-                     <div class="d-flex pt-2" id="link">
+                    <div class="d-flex pt-2">
                         <a class="btn btn-square me-1" href="https://x.com/haven77677"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square me-1" href="https://web.facebook.com/profile.php?id=61567119178873"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square me-1" href="https://www.instagram.com/transformation_haven/"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square me-0" href="https://www.tiktok.com/@transformation_haven?lang=en"><i class='bx bxl-tiktok'></i></a>
                     </div>
                 </div>
