--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-150 h-100 pt-5 pe-5" src="img/newpicture5.jpeg" alt="" style="object-fit: contain; margin-top: 30px;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/newpicture10.jpeg" alt="" style="width: 200px; height: 200px;">
+                        <img class="position-absolute w-150 h-100 pt-5 pe-5" src="New Images2 used/newpicture5.jpeg" alt="" style="object-fit: contain; margin-top: 30px;">
+                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="New Images2 used/newpicture10.jpeg" alt="" style="width: 200px; height: 200px;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
