--- a/testimonial.html
+++ b/testimonial.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3358.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="New Images2 used/RDM_3508.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>The work this NGO does is remarkable. From providing healthcare to the underserved to advocating for those without a voice, they’ve inspired me to get involved and give back in any way I can</p>
                         <h5 class="mb-1">Mrs Blessing</h5>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="testimonial-item text-center">
-                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/RDM_3660.jpg" style="width: 100px; height: 100px;">
+                    <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="New Images2 used/RDM_3660.jpg" style="width: 100px; height: 100px;">
                     <div class="testimonial-text rounded text-center p-4">
                         <p>Supporting this NGO has been a rewarding experience. Their commitment to improving lives is unmatched, and I’ve seen firsthand how they uplift communities through their tireless efforts.</p>
                         <h5 class="mb-1">Seun Akindola</h5>
