--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
                         <img class="position-absolute w-80 h-100 pt-5 pe-5" src="New Images2 used/newpicture5.jpeg" alt="" style="object-fit: cover;  margin-top: 30px;">
-                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="New Images2 used/newpicture1.jpeg" alt="" style="width: 200px; height: 200px; object-fit: cover;">
+                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="New Images2 used/RDM_003.jpeg" alt="" style="width: 200px; height: 200px; object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="New Images2 used/RDM_3801.jpg" alt="">
+                            <img class="img-fluid" src="New Images2 used/RDM_00001.jpeg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="">
                                     Read More
