--- a/photo.html
+++ b/photo.html
@@ -164,7 +164,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="team-item position-relative rounded overflow-hidden">
                             <div class="overflow-hidden">
-                                <img class="img-fluid" src="New Images2 used/RDM_005.jpeg" alt="">
+                                <img class="img-fluid" src="New Images2 used/WhatsApp Image 2024-12-17 at 15.04.12.jpeg" alt="">
                             </div>
                             </div>
                     </div>
